# pyEfis

./: .gitignore  ANDROID.md  AUTHORS  COPYING  IMPROVED_GAUGES.md  INSTALLING.md  MANIFEST.in  MakeCIFPIndex.py  Makefile  README  README.md  README.rst  TODO  config  config.py.default  conftest.py  data.json  events.py  garmintry.py  gui.py  hooks.py  menu.py  pyEfis.py  pyEfis_v1.py  pyefis.xml  pyefis_rasp.xml  pyproject.toml  requirements.txt  scheduler.py  setup.py  teststack.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  coverage.yml  python-app.yml
ai/: __init__.py
airspeed/: __init__.py
altimeter/: __init__.py
canbus/: __init__.py  canfixusb.py  easy.py  exceptions.py  network.py  simulate.py
config/: beagle.cfg  beagle.yaml  ems.cfg  ems.yaml  hmi.yaml  main.cfg  main.yaml  menus.yaml
contrib/: pyefis.service  waydroid-monitor.service  waydroid_monitor.sh
doc/: getting_started.rst  intro.rst
docs/: Makefile  action_handlers.md  button_event_processing.md  coding.rst  conf.py  config_relationships.md  getting_started.rst  intro.rst  physical_button_association.md  requirements.md  screenbuilder.md  toc.rst
efis/: __init__.py
extras/: README.md
extras/extras/: pyefis.service  waydroid-monitor.service  waydroid_monitor.sh
fgfs/: __init__.py  pyefis.xml
fix/: __init__.py  canfix.py  canfix.xml  client.py
gauges/: __init__.py
guages/: __init__.py
hmi/: __init__.py  actions.py  data.py  functions.py  keys.py  menu.py
hsi/: __init__.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_25dc114ee2e42cd5___init___py.html  z_4335419f415bb06c___init___py.html  z_44db6b362c5669a8___init___py.html  z_5c4843b5baa13b0b___init___py.html  z_636cc9296e567e93___init___py.html  z_92affc2a3b34b1bb___init___py.html  z_92affc2a3b34b1bb_cfg_py.html  z_92affc2a3b34b1bb_gui_py.html  z_92affc2a3b34b1bb_hooks_py.html  z_92affc2a3b34b1bb_main_py.html  z_92affc2a3b34b1bb_version_py.html  z_934b478e6c106426_ems_sm_py.html  z_934b478e6c106426_epfd_py.html  z_934b478e6c106426_pfd_py.html  z_934b478e6c106426_pfd_sm_py.html  z_934b478e6c106426_r582_sm_py.html  z_934b478e6c106426_screenbuilder_config_py.html  z_934b478e6c106426_screenbuilder_display_py.html  z_934b478e6c106426_screenbuilder_encoder_py.html  z_934b478e6c106426_screenbuilder_factory_py.html  z_934b478e6c106426_screenbuilder_layout_py.html  z_934b478e6c106426_screenbuilder_options_py.html  z_934b478e6c106426_screenbuilder_overlay_py.html  z_934b478e6c106426_screenbuilder_preferences_py.html  z_934b478e6c106426_screenbuilder_py.html  z_934b478e6c106426_sixpack_py.html  z_934b478e6c106426_test_py.html  z_a52039128fd4f1f2___init___py.html  z_a52039128fd4f1f2_abstract_py.html  z_a52039128fd4f1f2_arc_py.html  z_a52039128fd4f1f2_egt_py.html  z_a52039128fd4f1f2_horizontalBar_py.html  z_a52039128fd4f1f2_numeric_py.html  z_a52039128fd4f1f2_verticalBar_py.html  z_abcbd0a8f0ce4239___init___py.html  z_abcbd0a8f0ce4239_actionclass_py.html  (+17 more)
instruments/NumericalDisplay/: __init__.py
instruments/ai/: CIFPObjects.py  Spatial.py  VirtualVfr.py  __init__.py  util.py
instruments/airspeed/: __init__.py
instruments/altimeter/: __init__.py
instruments/gauges/: __init__.py  abstract.py  arc.py  egt.py  horizontalBar.py  numeric.py  verticalBar.py
instruments/hsi/: __init__.py
instruments/misc/: __init__.py
instruments/pa/: __init__.py
instruments/tc/: __init__.py
instruments/vsi/: __init__.py
lib/AeroCalc-0.11/: PKG-INFO  setup.py
mock_db/: client.py  scheduler.py
pa/: __init__.py
pyefis/: cfg.py  gui.py  main.py  version.py
pyefis/config/: beagle.yaml  default.yaml  main.yaml  nodeid.yaml  preferences.yaml  preferences.yaml.custom  rotax_ems.yaml  screenbuilder.yaml  weston.ini
pyefis/hmi/: __init__.py  actionclass.py  buttonmenu.py  data.py  keys.py  (+1 more)
rasp/: __init__.py  config
screens/: __init__.py  ems_sm.py  epfd.py  pfd.py  pfd_sm.py  sixpack.py  test.py
snap/: snapcraft.yaml
tc/: __init__.py
tests/: test_cfg.py  test_gui.py  test_hooks.py  test_main.py  test_version.py  utils.py  visual_svs_test.py
tools/: config_inspector.py
vsi/: __init__.py
(+339 files in other folders)
