[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

#[tool.setuptools]

[tool.setuptools.dynamic]
version = {attr = "pyefis.__version__"}

[project]
name = "pyEfis"
dynamic = ["version"]
description = "An Electronic Flight Information System written in Python."
readme = "README.rst"
requires-python = ">=3.8, <4"
authors = [
    { name = "MakerPlane Open Source Aviation", email = "contact@makerplane.org" },
]
keywords = [
    "aviation",
    "efis",
    "makerplane",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "geomag==0.9.2015",
    "geopy==2.4.1",
# Until this revision is published to PyPy get it from git:
    "pyavtools @ git+https://github.com/makerplane/pyAvTools/@b00273a9016e9a4b975f8efe51d63405103d58fb",
    "pycond==20230212",
    "PyQt5==5.15.10",
    "PyYAML==6.0.1",
]

[project.optional-dependencies]
build = [
    "build==1.2.1",
]

[project.scripts]
pyefis = "pyefis.main:main"

[project.urls]
Homepage = "https://makerplane.org/"
Source = "https://github.com/makerplane/pyEfis"


[tool.pytest.ini_options]
qt_api="pyqt5"
env = [
  "QT_QPA_PLATFORM = offscreen"
]
filterwarnings = [
    # I belive this is warning that pyqt needs updated if you update to python 3.12
    "ignore:sipPyTypeDict.*:DeprecationWarning:.*:"
]
addopts = "--cov=pyefis --cov-report html:extras/extras/test_results/htmlcov/ --cov-report term-missing"

