[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

#[tool.setuptools]

[tool.setuptools.dynamic]
version = {attr = "pyefis.__version__"}

[project]
name = "pyEfis"
dynamic = ["version"]
description = "An Electronic Flight Information System written in Python."
readme = "README.rst"
requires-python = ">=3.8, <4"
authors = [
    { name = "MakerPlane Open Source Aviation", email = "contact@makerplane.org" },
]
keywords = [
    "aviation",
    "efis",
    "makerplane",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "geopy==2.4.1",
# Until this revision is published to PyPy get it from git:
    "pyavtools @ git+https://github.com/makerplane/pyAvTools/@51c381b26ab47c9a975be8db4261a5483a73bf77",
    "pycond==20230212",
    "PyQt5==5.15.10",
    "PyYAML==6.0.1",
]

[project.optional-dependencies]
build = [
    "build==1.2.1",
]

[project.scripts]
pyefis = "pyefis.main:main"

[project.urls]
Homepage = "https://makerplane.org/"
Source = "https://github.com/makerplane/pyEfis"


[tool.pytest.ini_options]
qt_api="pyqt5"
env = [
  "QT_QPA_PLATFORM = offscreen:size=1000x1000"
#  "QT_QPA_PLATFORM = xcb:size=1000,1000"
]
filterwarnings = [
    # I belive this is warning that pyqt needs updated if you update to python 3.12
    "ignore:sipPyTypeDict.*:DeprecationWarning:.*:"
]
addopts = """
    --cov-report term-missing --cov-branch --cov-report html --cov-report term
    --cov=pyefis --cov-context=test -vv --strict-markers -rfE
    --ignore=tests/end_to_end/repo
"""

[tool.coverage.run]
relative_files = true

[tool.coverage.paths]
source = [
    "src/"
]

